KSENROLL-11799 - Replaced all Number constructors with static valueOf based on Sonar report.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@65181 0ac02d80-fb3f-11dc-a574-c57244a850eb